<resources>

    <string name="app_name">RTgraph</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_rtgraphdrawing">RTgraphdrawing</string>
    <string name="TextView1"/>
    <string name="TgON">BT ON</string>
    <string name="messages"/>
    <string name="TextView2"/>
    <string name="TextView3"/>
    <string name="MText"/>
    <string name="ButtonUP">+10%</string>
    <string name="ButtonDOWN">-10%</string>
    <string name="ButtonSET">SET</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="ButtonSTOP">STOP</string>
    <color name="RED">#FF0000</color>
    <string name="TgOFF">BT OFF</string>
    <string name="SwON">Start</string>
    <string name="SwOFF">Stop</string>
    <string name="connectButton">CONNECT</string>
    <string name="sendButton">SEND</string>
    <string name="disconnectButton">DISCONECT</string>
    <string name="messageIn"/>

</resources>