<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal" >

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/RED"
        android:text="@string/TextView1" />

    <TextView
        android:id="@+id/messages"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textView1"
        android:textColor="@color/white"
        android:text="@string/messages" />

    <SurfaceView
        android:id="@+id/surfaceView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/surfaceView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/surfaceView2"
        android:text="@string/TextView2" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/surfaceView2"
        android:onClick="toggleBluetooth"
        android:textOn="@string/TgOFF"
        android:textSize="10sp"
        android:textOff="@string/TgON" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_alignTop="@+id/messages"
        android:text="@string/TextView3"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/toggleButton1"
        android:text="@string/MText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/surfaceView2"
        android:layout_marginRight="52dp"
        android:onClick="buttonUP"
        android:textSize="10sp"
        android:text="@string/ButtonUP" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView4"
        android:onClick="buttonDOWN"
        android:textSize="10sp"
        android:text="@string/ButtonDOWN" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button2"
        android:onClick="buttonSET"
        android:text="@string/ButtonSET" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/surfaceView2"
        android:onClick="buttonSTOP"
        android:textSize="8sp"
        android:textStyle="bold"
        android:textColor="@color/RED"
        android:text="@string/ButtonSTOP" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:onClick="buttonSEND"
        android:text="@string/sendButton" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_toLeftOf="@+id/toggleButton2"
        android:layout_toRightOf="@+id/button5"
        android:onClick="connectButton"
        android:text="@string/connectButton" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignRight="@+id/messages"
        android:onClick="toggleSw"
        android:textOff="@string/SwON"
        android:textOn="@string/SwOFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/messageIn"
        android:textSize="11sp" />

</RelativeLayout>